[gd_scene load_steps=2 format=3 uid="uid://cgag1gd7bsmae"]

[ext_resource type="Script" path="res://src/ui/components/text_display.gd" id="1_1a2b3c"]

[node name="TextDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1a2b3c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="SampleContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SampleLabel" type="RichTextLabel" parent="VBoxContainer/SampleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
fit_content = true
scroll_active = false
bbcode_enabled = true
text = "Sample text will appear here..."
fit_content_height = true

[node name="CursorContainer" type="Control" parent="VBoxContainer/SampleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 0.1
show_percentage = false

[node name="StatsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="WPMLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "WPM: 0"
horizontal_alignment = 1

[node name="AccuracyLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accuracy: 100.0%"
horizontal_alignment = 1

[node name="MistakesLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mistakes: 0"
horizontal_alignment = 1
